# dkmodel2vec

./: .gitignore  README.md  pyproject.toml
dkmodel2vec/: config.py  constants.py  data_loader.py  distillation.py  evaluator.py  llm_loader.py  logging.py  models.py  retrieval.py  utils.py  visualization.py  vocab.py
notebooks/: 1. Try model.ipynb  2. EDA.ipynb  3. Performance assessment.ipynb  5. Clustering.ipynb  6. Compare runs.ipynb
scripts/: baselines.py  distill.py  featurize.py  finetune.py  hyperparams.py  push_to_hub.py  retrieval.py  run_benchmark.sh  run_experiments.sh  run_finetune.sh  run_mlflow.sh  run_retrieval.sh  run_visualize_token_embeddings.sh  speed.py  train.py  visualize_token_embeddings.py
tests/: conftest.py  test_llm2vec.py
