[project]
name = "dkmodel2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "llm2vec>=0.2.3",
    "model2vec>=0.2.4",
    "nbformat>=4.2.0",
    "numpy<2",
    "peft>=0.15.2",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
]
