[project]
name = "dkmodel2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "llm2vec==0.2.3",
    "mlflow>=3.3.1",
    "model2vec==0.6",
    "nbformat>=4.2.0",
    "numpy<2",
    "peft>=0.15.2",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "rank-bm25",
    "ruff>=0.11.13",
    "seb",
    "torch>=2.7.1",
]
[tool.setuptools.packages.find]
where = ["."]
exclude = ["notebooks*", "tests*"]

[tool.uv.sources]
llm2vec = { git = "https://github.com/andersborges/llm2vec.git" }

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
