[project]
name = "dkmodel2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "anywidget>=0.9.18",
    "bm25s>=0.2.14",
    "boto3>=1.40.26",
    "datasets>=3.6.0",
    "embedding-atlas>=0.10.0",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.29.5",
    "ipython>=8.37.0",
    "llm2vec==0.2.3",
    "mlflow>=3.3.1",
    "model2vec==0.6",
    "nbformat>=4.2.0",
    "nltk>=3.9.2",
    "numpy<2",
    "peft>=0.15.2",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "rank-bm25",
    "ruff>=0.11.13",
    "seb",
    "tokenlearn>=0.2.1",
    "torch>=2.7.1",
    "typing-extensions>=4.15.0",
]
[tool.setuptools.packages.find]
where = ["."]
exclude = ["notebooks*", "tests*"]

[tool.uv.sources]
llm2vec = { git = "https://github.com/andersborges/llm2vec.git" }

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu",
]
cpu = [
    "faiss-cpu",
]
